lender/tests/fail/manual_covariant_lending_invariant.stderr
error[E0053]: method `__check_covariance` has an incompatible type for trait
  --> tests/fail/manual_covariant_lending_invariant.rs:32:16
   |
32 |         proof: lender::CovariantProof<&'short <Self as lender::FallibleLending<'long>>::Lend>,
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Cell<Option<&'long String>>`, found `&'long Cell<Option<&'long String>>`
   |
   = note: expected signature `fn(CovariantProof<&'long Cell<Option<&'long String>>>) -> CovariantProof<&'short Cell<Option<&'short String>>>`
              found signature `fn(CovariantProof<&'short &'long Cell<Option<&'long String>>>) -> CovariantProof<&'short &'short Cell<Option<&'short String>>>`
help: change the parameter type to match the trait
   |
32 -         proof: lender::CovariantProof<&'short <Self as lender::FallibleLending<'long>>::Lend>,
32 +         proof: CovariantProof<&'long Cell<Option<&'long String>>>,
   |

error: lifetime may not live long enough
  --> tests/fail/manual_covariant_lending_invariant.rs:20:9
   |
17 |     fn __check_covariance<'long: 'short, 'short>(
   |                           -----          ------ lifetime `'short` defined here
   |                           |
   |                           lifetime `'long` defined here
...
20 |         proof
   |         ^^^^^ associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> tests/fail/manual_covariant_lending_invariant.rs:34:9
   |
31 |     fn __check_covariance<'long: 'short, 'short>(
   |                           -----          ------ lifetime `'short` defined here
   |                           |
   |                           lifetime `'long` defined here
...
34 |         proof
   |         ^^^^^ associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
